--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-    "name": "technocolab",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "nodemon src/app.js"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "express": "^4.17.1",
-        "hbs": "^4.1.1",
-        "mongoose": "^5.11.18"
-    }
+  "name": "review-my-project-02-feb-web-team-main",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "fs": "0.0.1-security",
+    "mongodb": "^3.6.4",
+    "multer": "^1.4.2"
+  }
 }
